fixed broken css

--- a/ui/static/main.css
+++ b/ui/static/main.css
@@ -66,7 +66,6 @@ color:aquamarine;
     color:#1a8789;
     text-decoration: underline;
     transition: color .4s;
-    display:inline;
 }
 .internal-link:visited{
     color: #6e8282;
